# mtgproxy

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
.github/workflows/: formatter.yaml
src/: command.py  commons.py  create_proxy.py
