[tool.poetry]
name = "mtgproxy"
version = "0.1.0"
description = "This is the scripts for automatically creating a proxy from the deck list."
license = "MIT License"
authors = ["reonyanarticle <reonaarticles@gmail.com>"]
repository = "https://github.com/reonyanarticle/mtg_proxy"
readme = "README.md"
packages = [
    {include="src"}
]

[tool.poetry.scripts]
mtgproxy = "src.command:main"

[tool.poetry.dependencies]
python = "^3.9"
mtgsdk = "^1.3.1"
tqdm = "^4.62.3"
more-itertools = "^8.10.0"
click = "^8.0.1"
reportlab = "^3.6.1"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
